--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,15 @@
     background-color: #333;
     padding: 20px;
 }
+
+/* 20 padding individual */
+.padding-individual{
+    background-color: #222;
+    color: #fff;
+    /* padding-top: 5px;
+    padding-right: 20px;
+    padding-bottom: 40px;
+    padding-left: 10px;
+    */
+    padding: 5px 20px 40px 10px;
+}
