--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,22 @@
     padding: 15px;
     border-radius: 25px;
 }
+/* 22box model */
+
+.box-model{
+    margin: 20px;
+    background-color: aquamarine;
+    padding: 15px 25px;
+    border: 2px solid red;
+    width: 200px;
+    height: 400px;
+}
+
+/* 23 desafio */
+#box-model-desafio{
+    margin: 15px;
+    padding: 15px;
+    border: 2px solid blue;
+    background-color: antiquewhite;
+    outline: 5px solid #952;
+}
