--- a/css/style.css
+++ b/css/style.css
@@ -190,3 +190,16 @@
     background-color: antiquewhite;
     outline: 5px solid #952;
 }
+/* 24 */
+
+.text-aligned{
+    text-align: right;
+}
+
+.container-center{
+    text-align: center;
+    background-color: antiquewhite;
+    width: 300px;
+    border: solid red;
+    margin-left: 130px;
+}
